--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2306,10 +2306,10 @@ Characteristics:
           <td class="widget-keyboard-head" scope="row">Keyboard Interaction: </td>
           <td class="widget-keyboard">
             <ul>
-              <li><kbd>Tab</kbd> Like other widgets, the tab key is used to move focus   to the splitter. It should appear in the normal tab order of the page. A second   tab will move focus to the next tabbable item on the page. </li>
+              <li><kbd>Tab</kbd> - Like other widgets, the tab key is used to move focus   to the splitter. It should appear in the normal tab order of the page. A second   tab will move focus to the next tabbable item on the page. </li>
               <li><kbd>Left Arrow</kbd> and <kbd>Right Arrow</kbd> - In the case of a vertical splitter these keys will move the splitter to the left and to the right.</li>
               <li><kbd>Up Arrow</kbd> and <kbd>Down Arrow</kbd> - In the case of a horizontal splitter these keys will move the splitter up and down.</li>
-              <li><kbd>Enter</kbd> If pane controlled by the splitter is not collapsed, then collapse the pane. If the pane is collapsed then restore the splitter to its previous position. </li>
+              <li><kbd>Enter</kbd> - If pane controlled by the splitter is not collapsed, then collapse the pane. If the pane is collapsed then restore the splitter to its previous position. </li>
               <li><kbd>End</kbd> Optionally moves splitter so the associated pane is the largest allowed size. </li>
               <li><kbd>Home</kbd> Optionally moves splitter so the associated pane is the smallest allowed size. In many cases this will collapse the pane completely. </li>			  
               <li><kbd>F6</kbd> Optionally is recommended to rotate through the window   panes. </li>
