Aria-Practices: Fix typo behavies -> behaves

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -607,7 +607,7 @@
             </ul>
             <p>For the second combobox design pattern: </p>
             <ul>
-              <li>The first element for the combobox has a role of combobox and behavies like an input text field and is responsible for managing the keyboard focus between the combobox and the list as well as displaying the list. The text field is in the tab order. If you create a text field without using a standard HTML text field form control then ensure that it is in the tab order.  </li>
+              <li>The first element for the combobox has a role of combobox and behaves like an input text field and is responsible for managing the keyboard focus between the combobox and the list as well as displaying the list. The text field is in the tab order. If you create a text field without using a standard HTML text field form control then ensure that it is in the tab order.  </li>
               <li>If the combobox is not editable it must have have <a href="#aria-readonly" class="property-reference">aria-readonly</a> = <code>true</code> . </li>
               <li>The combobox must have <a href="#aria-expanded" class="property-reference">aria-expanded</a> = <code>true</code> if the list is displayed or <a href="#aria-expanded" class="property-reference">aria-expanded</a> = <code>false</code> when it is not. </li>
               <li>The next element is an html <code>&lt;button&gt;</code>, or another element with a role of <a href="#button" class="role-reference">button</a>.  This element is used to toggle the display of the combobox's drop down list. </li>
