modified:   practices/aria-practices.html Provided proposed solution to Bug 28037: pattern-alert Need to develop a proposal for a description

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -305,7 +305,15 @@
         <tbody>
           <tr>
             <td class="widget-description-head" scope="row">Description: </td>
-            <td class="widget-description">A message with important information</td>
+            <td class="widget-description">
+            <p>An alert is an element that displays a brief, important message in a way that attracts the user's attention without interrupting the user's task. Alerts are automatically announced by most screen readers, and in some operating systems, they may trigger an alert sound.</p>
+<p>Because an alert is intended to provide important and potentially time-sensitive information without interfering with the user's ability to continue working, authors should ensure alerts do not effect the keyboard focus. 
+If there is a need to interrupt work flow, consider using an <a href="#alertdialog">alert dialog</a></p>
+<p>In most circumstances, authors should avoid making alerts disappear automatically. 
+An alert that disappears too quickly can lead to failure to meet <a href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/time-limits-no-exceptions.html">WCAG 2.0 success criterion 2.2.3</a>. 
+In addition, authors should be careful to avoid overuse of alerts. 
+Frequent interruptions inhibit usability for people with visual and cognitive disabilities, leading to failures to meet <a href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/time-limits-postponed.html">WCAG 2.0 success criterion 2.2.4</a>.</p>
+            </td>
           </tr>
           <tr>
             <td class="widget-keyboard-head" scope="row">Keyboard Interaction: </td>
