--- a/aria-practices.html
+++ b/aria-practices.html
@@ -306,7 +306,7 @@
           <tr>
             <td class="widget-description-head" scope="row">Description: </td>
             <td class="widget-description">
-            <p>An alert is an element that displays a brief, important message in a way that attracts the user's attention without interrupting the user's task. Alerts are automatically announced by most screen readers, and in some operating systems, they may trigger an alert sound.</p>
+            <p>An <a class="role-reference" href="#alert">alert</a> is an element that displays a brief, important message in a way that attracts the user's attention without interrupting the user's task. Alerts are automatically announced by most screen readers, and in some operating systems, they may trigger an alert sound.</p>
 <p>Because an alert is intended to provide important and potentially time-sensitive information without interfering with the user's ability to continue working, authors should ensure alerts do not effect the keyboard focus. 
 If there is a need to interrupt work flow, consider using an <a href="#alertdialog">alert dialog</a></p>
 <p>In most circumstances, authors should avoid making alerts disappear automatically. 
