modified:   aria-practices.html Added following note to section 2.2 Accordion Editor's note: This section has not been updated since it was integrated from APG version 1.0 -- an APG taskforce review is pending.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -183,6 +183,7 @@
     <hr />
     <section class="widget" id="accordion">
     <h3 class="widget-name">Accordion</h3>
+    <p><strong>Editor's note:</strong> This section has not been updated since it was integrated from APG version 1.0 -- an APG taskforce review is pending.</p>
       <table cellspacing="0" class="widget-features">
         <caption>
         Characteristics:
