--- a/aria-practices.html
+++ b/aria-practices.html
@@ -461,8 +461,35 @@ Frequent interruptions inhibit usability for people with visual and cognitive di
           <tr>
             <td class="widget-description-head" scope="row">Description: </td>
             <td class="widget-description">
-              <p><a class="role-reference" href="#button">button</a> widgets allow for user-triggered actions, and they are most often used for discrete, atomic actions. Buttons support the optional state <a href="#aria-pressed" class="state-reference">aria-pressed</a>. Buttons with this state are toggle buttons. When  <span class="state-reference">aria-pressed</span> is <code>true</code> the button is depressed, when pressed is <code>false</code> it  is not depressed.  </p>
-              <p>Sometimes a button will launch a dialog box.  This is indicated using &quot;&hellip;&quot; (ellipsis) at the end of the button label.  An example is &quot;Save as &hellip;&quot;.</p>
+              <p>A <a class="role-reference" href="#button">button</a> is a widget that enables users to trigger an action or event, such as submitting a form, opening a dialog, cancelling an action, or performing a delete operation. WAI-ARIA supports 3 types of buttons:</p>
+              <ul>
+                <li>Toggle button: A two-state button that can be either off (not
+                  pressed) or on (pressed. To tell assistive technologies that a button is
+                  a toggle button, specify a value for the attribute <a
+                  href="#aria-pressed" class="state-reference"
+                >aria-pressed</a>. For example, a button labeled mute in an audio player
+                  could indicate that sound is muted by setting the pressed state true. <STRONG>Important:<strong>
+                      the label on a toggle button should never change when the state
+                      changes. In this example, when the pressed state is true, the label
+                      should not change to &quot;Unmute"&quot; or &quot;Muted.&quot; 
+                </li>
+                <li>Menu button: as described in the <a href="#menubutton">menu
+                    button pattern</a>, a button will be revealed to assistive technologies as
+                  a menu button if it has the property <a href="#aria-haspopup" class="property-reference">aria-haspopup</a> set true.
+                </li>
+                <li>Button: Buttons that are not toggle buttons or menu buttons are
+                  standard command buttons. They are seen by assistive technologies simply
+                  as a button.</li>
+              </ul>
+              <p>A common convention for informing users that a button launches a dialog is to append &quot;&hellip;&quot; (ellipsis) to the button label, e.g., .&quot;Save as &hellip;&quot;.</p>
+              <p class="note">The types of actions performed by buttons are distinctly
+                different from the function of a link (see <a href="#link">link pattern</a>). It is important that the
+                role of a widget matches the function it provides. Ideally, the
+                role of the element also matches its visual appearance. But, occasionally,an
+                element may be visually styled as an icon or link but perform the action of abutton.
+                In these cases, the element should be given a button role. The Designers
+                should work to avoid conflicts between visual appearance and WAI-ARIA
+                semantics.</p>
             </td>
           </tr>
           <tr>
