modified:   aria-practices.html Resolved Bug 28572 – Pattern - Alert or Message Dialog: visible focus indicator is required. Changed text to read: When the message area of a dialog is focusable and has focus, a visual focus indicator is required, and it is recommended that the indicator encompass the complete message.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -361,7 +361,7 @@ Frequent interruptions inhibit usability for people with visual and cognitive di
               <ul>
                 <li>Content authors make alert dialogs modal by ensuring that, while the alertdialog is shown, keyboard and mouse interactions only operate within the dialog. </li>
                 <li>The message area of a detail message dialog is focusable and has a <a class="role-reference" href="#document">document</a> role so screen reader users will have complete access to the message content, e.g., the screen reader can read it by character, word, or line. </li>
-                <li>When the message area of a dialog is focusable and has focus, a visual focus indicator around the message is recommended. </li>
+                <li>When the message area of a dialog is focusable and has focus, a visual focus indicator is required, and it is recommended that the indicator encompass the complete message.</li>
               </ul>
             </td>
           </tr>
