modified:   aria-practices.html Minor update to editor's note in Alert Dialog or Message Dialog section to indicate that minor edits have been made but a complete review is pending.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -334,7 +334,7 @@ Frequent interruptions inhibit usability for people with visual and cognitive di
     <hr />
     <section class="widget" id="alertdialog">
       <h3 class="widget-name">Alert Dialog or Message Dialog</h3>
-      <p><strong>Editor's note:</strong> This section has not been updated since it was integrated from APG version 1.0 -- an APG taskforce review is pending.</p>
+      <p><strong>Editor's note:</strong> This section has had only minor edits since it was integrated from APG version 1.0 -- a complete APG taskforce review is pending.</p>
       <table cellspacing="0" class="widget-features">
         <caption>
         Characteristics:
